<resources>
    <!-- APP NAME -->
    <string name="app_name">Lala-Bus</string>

    <!-- DEFAULT STRINGS -->
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- DEFAULT STRING BUTTONS -->
    <string name="skip_button">Skip</string>
    <string name="continue_button">Continue</string>
    <string name="start_button">Let\'s Get Started</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_in_button">Sign In</string>
    <string name="verify_button">Verify</string>
    <string name="commuter_button">Commuter/Passenger</string>
    <string name="driver_button">Modern Jeep Driver</string>

    <!-- PICTURES DESCRIPTION -->
    <string name="app_logo_description">Lala-Bus Logo App</string>
    <string name="starter_picture_description">Preview look picture of the Lala-Bus APP</string>
    <string name="settings_description">Lala-Bus settings icon</string>
    <string name="filter_description">Lala-Bus filter icon</string>

    <!-- UTILITIES -->
    <!-- Bottom Navigation Bar -->
    <string name="home">Home</string>
    <string name="stations">Stations</string>

    <!-- Custom Dialog Boxes -->
    <string name="filters">Filters</string>
    <string name="show_only">Show Only:</string>
    <string name="laoag_paoay">Laoag-Paoay (via Batac) Buses</string>
    <string name="paoay_laoag">Paoay-Laoag (via Batac) Buses</string>
    <string name="cancel">Cancel</string>
    <string name="apply_filter">Apply Filter</string>


    <!-- MAIN -->
    <!-- Stations Fragment   -->
    <string name="hello">Hello,</string>
    <string name="today">Today:</string>
    <string name="user_name">{user_name}</string>

    <!-- Home Fragment -->


    <!-- SPLASH ART & STARTERS -->
    <!--    Starter 1 -->
    <string name="starter1_title">Welcome to Lala-Bus - Your Convenience. Your Way</string>
    <string name="starter1_description">Get ready to experience hassle-free transportation. We’ve got everything you need to travel with ease. Let\'s get started!</string>
    <!--    Starter 2 -->
    <string name="starter2_title">Track Buses in Real-Time - Wherever You Are</string>
    <string name="starter2_description">Say goodbye to long waits! With Lala-Bus, you can see exactly where your bus is on the map and how long it will take to reach your stop. </string>
    <!--    Starter 3 -->
    <string name="starter3_title">Plan Your Trip - Stay in Control of Your Time</string>
    <string name="starter3_description">See estimated arrival times and plan your trips in advance. Lala-Bus helps you avoid long waits by letting you know when the next bus will arrive.</string>
    <!--    Start Now -->
    <string name="start_now_title">Let\'s Get You Setup!</string>
    <string name="start_now_description">Let\'s dive in into your account</string>

    <!-- AUTHENTICATION -->
    <!-- Sign Up -->
    <string name="sign_up_title">Join Lala-Bus Today ✨</string>
    <string name="sign_up_description">Let\'s get started! Enter your phone number to create your Lala-Bus account.</string>
    <string name="phone_number">Phone Number</string>
    <string name="i_agree_to_lala_bus">I agree to Lala-Bus</string>
    <string name="terms_of_conditions">Terms of Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>

    <!-- Sign Up -->
    <string name="sign_in_title">Welcome Back! 👋</string>
    <string name="sign_in_description">Please enter your phone number to sign in to your Lala-Bus account.</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>

    <!-- OTP Verification -->
    <string name="verification_title">Enter OTP Code 🔐</string>
    <string name="verification_description">Check your messages! We’ve sent a one-time code to your number. Enter the code below to verify your account and continue.</string>
    <string name="resend_code">Resend Code</string>

    <!-- Start Final -->
    <string name="start_final_title">Final Setup 🤓</string>
    <string name="start_final_description">Are you a Passenger or Modern Jeep Operator? This tells the system that you are either of the following choices. Choose one:</string>

    <!-- Commuter & Driver Input Form -->
    <string name="input_form_title">Fill-up Information</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="bus_details">Bus Details</string>
    <string name="plate_number">Plate Number</string>

    <!-- SETTINGS -->
    <string name="settings">Settings</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_location_services">Location Services</string>
    <string name="settings_about">About</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_footer">Copyright 2024 Lala-Bus. All rights reserved.</string>

</resources>