<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/filter_button_design"
        android:padding="24dp">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/filters"
            android:textSize="20sp"
            android:textColor="@color/default_text_color_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/show_only"
            android:textColor="@color/default_text_color_black"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <CheckBox
            android:id="@+id/laoag_paoay_rotation_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:checked="true"
            android:text="@string/laoag_paoay"
            android:textColor="@color/default_text_color_black"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <CheckBox
            android:id="@+id/paoay_laoag_rotation_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/paoay_laoag"
            android:textColor="@color/default_text_color_black"
            app:layout_constraintStart_toStartOf="@+id/laoag_paoay_rotation_checkbox"
            app:layout_constraintTop_toBottomOf="@+id/laoag_paoay_rotation_checkbox" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary_color_blue"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/apply_filter"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paoay_laoag_rotation_checkbox" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/secondary_button_color_light_blue"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/cancel"
            android:textColor="@color/primary_color_blue"
            app:layout_constraintEnd_toStartOf="@+id/apply_filter_button"
            app:layout_constraintTop_toBottomOf="@+id/paoay_laoag_rotation_checkbox" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>