<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".settings.SettingsActivity">

    <!--  HEADER  -->
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/default_text_color_black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/app_name"
            android:textColor="@color/default_text_color_black"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/default_text_color_black"
            android:text="@string/today" />
    </LinearLayout>

    <!-- MAIN -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/settings"
            android:textColor="@color/default_text_color_gray"
            android:fontFamily="@font/montserrat_bold"
            android:background="@color/settings_title"/>
        <TextView
            android:id="@+id/settings_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:text="@string/settings_profile"
            android:textSize="16sp"
            android:textColor="@color/default_text_color_black"
            android:fontFamily="@font/montserrat_bold"
            android:background="@drawable/header_bar_design"/>
        <TextView
            android:id="@+id/settings_location_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:text="@string/settings_location_services"
            android:textSize="16sp"
            android:textColor="@color/default_text_color_black"
            android:fontFamily="@font/montserrat_bold"
            android:background="@drawable/header_bar_design"/>
        <TextView
            android:id="@+id/settings_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:text="@string/settings_about"
            android:textSize="16sp"
            android:textColor="@color/default_text_color_black"
            android:fontFamily="@font/montserrat_bold"
            android:background="@drawable/header_bar_design"/>
        <TextView
            android:id="@+id/settings_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:text="@string/settings_logout"
            android:textSize="16sp"
            android:textColor="@color/default_text_color_black"
            android:fontFamily="@font/montserrat_bold"
            android:background="@drawable/header_bar_design"/>
    </LinearLayout>

    <!-- FOOTER -->
    <TextView
        android:id="@+id/footer_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:padding="20dp"
        android:text="@string/settings_footer"
        android:textColor="@color/default_text_color_gray"
        android:textAlignment="center"
        android:background="@drawable/settings_footer_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>